# lighthouse-2026

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  sumario_falhas.txt
datasets/: cambio.csv  produtos_com_prejuizo.csv  resultado_agregado_produtos.csv  resultado_transacoes.csv
docs/: Questões desafio tecnico.docx  [Lighthouse 2026-05] Aula s ncrona 12_03_2026 - A import ncia das Soft Skills   Dicas de Prepara o para Entrevista.pdf:Zone.Identifier  feedback teste erro.docx
questions/: q1.md  q2.md  q3.md  q4.md  q5.md  q6.md  q7.md
reports/: q5_categoria_predominante.csv  q5_clientes_metricas.csv  q5_top_10_clientes_elite.csv  sumario_falhas.txt  transacoes_com_prejuizo.csv
sql/: q6_queries.sql
src/: load_tables.py  q1.py  q2.py  q3.py  q4.py  q5.py  q6_carga.py  q7.py  q8.py
