[project]
name = "lighthouse-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "ydata-profiling>=4.18.1",
]
